bpo-43260: io: Prevent large data remains in textio.

When very large data remains in TextIOWrapper, flush() may fail forever.
So prevent large (i.e. 1MiB) data remains in TextIOWrapper internal
buffer.